--- a/src/app/service-list/service-list.component.html
+++ b/src/app/service-list/service-list.component.html
@@ -2,8 +2,14 @@
     <h1 class="service-title">Виды принимаемого сырья</h1>
   <div class="col-md-5">
     <app-service-table></app-service-table>
+   
   </div>
   <div class="col-md-7">
     <app-service-detail></app-service-detail>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+     <app-service-edit></app-service-edit>
   </div>
 </div>
