--- a/src/app/service-list/service-edit/service-edit.component.html
+++ b/src/app/service-list/service-edit/service-edit.component.html
@@ -1,1 +1,10 @@
-<p>service-edit works!</p>
+<div class="row">
+    <div class="col-xs-10">
+        <app-service-form></app-service-form>
+        <hr>
+        <ul class="list-group">
+            <a class="list-group-item" style="cursor: pointer;" *ngFor="let product of products">
+            {{product.name}} - {{product.amount}}кг</a>
+        </ul>
+    </div>
+</div>
