--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -61,5 +61,5 @@
       </nav>
     </div>
   </div>
-  <div class="footer__copyright">Coptyright</div>
+  <div class="footer__copyright">Copyright</div>
 </div>
