--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
   <!-- <div class="container"> -->
   <div class="row">
     <h1 class="text-left">Основы переработки</h1>
