--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer" id="contacts">
   <div class="container">
     <div class="footer__content">
       <div class="footer__inner">
