--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,11 +4,11 @@
             <a href="#" class="navbar-brand">Logo</a>
         </div>
         <ul class="nav navbar-nav" style="color: white;">
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Услуги</a></li>
-            <li><a href="#">О Компании</a></li>
-            <li><a href="#">Партнеры</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a role="button" (click)="onScroll('main')">Главная</a></li>
+            <li><a role="button" (click)="onScroll('service')">Услуги</a></li>
+            <li><a role="button" (click)="onScroll('about')">О Компании</a></li>
+            <li><a role="button" (click)="onScroll('partners')">Партнеры</a></li>
+            <li><a role="button" (click)="onScroll('contacts')">Контакты</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign up</a></li>
