--- a/src/app/service-list/service-detail/service-detail.component.html
+++ b/src/app/service-list/service-detail/service-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="" alt="" class="img-responsive">
-        <h4>Name</h4>
-        <button class="btn btn-default">Добавить</button>
+        <img src="{{product.image}}" alt="{{product.name}}" class="img-responsive">
+        <!-- <h4>{{product.name}}</h4>
+        <button class="btn btn-default">Добавить</button> -->
     </div>
 </div>
