--- a/src/app/service-list/service-edit/service-form/service-form.component.html
+++ b/src/app/service-list/service-edit/service-form/service-form.component.html
@@ -1,21 +1,26 @@
 <div class="row">
     <div class="col-xs-12">
+        <h3 class="text-left">Оставить заявку</h3>
         <form>
             <div class="row">
-                <div class="col-sm-5 form-group">
-                    <label for="name">Name</label>
+                <div class="col-sm-3">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" class="form-control">
+                </div>
+                <div class="col-sm-3 form-group">
+                    <label for="name">Название</label>
                     <input type="text" id="name" class="form-control">
                 </div>
                 <div class="col-sm-2 form-group">
-                    <label for="amount">Amount</label>
+                    <label for="amount">Количество</label>
                     <input type="amount" id="amount" class="form-control">
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Добавить</button>
-                    <button class="btn btn-danger" type="button">Удалить</button>
-                    <button class="btn btn-primary" type="button">Очистить</button>
+                    <button class="btn btn-primary" type="submit">Изменить</button>
+                    <!-- <button class="btn btn-danger" type="button">Удалить</button> -->
+                    <button class="btn btn-success" type="button">Отправить</button>
                 </div>
             </div>
         </form>
