--- a/src/app/service-list/service-list.component.html
+++ b/src/app/service-list/service-list.component.html
@@ -1,11 +1,12 @@
-<div class="row">
+<div class="row" id="service">
     <h1 class="service-title">Виды принимаемого сырья</h1>
   <div class="col-md-5">
     <app-service-table></app-service-table>
    
   </div>
   <div class="col-md-7">
-    <app-service-detail></app-service-detail>
+   <app-service-detail *ngIf="selectedItem"
+   [product]="selectedItem"></app-service-detail>
   </div>
 </div>
 <div class="row">
