--- a/src/app/service-list/service-table/service-table.component.html
+++ b/src/app/service-list/service-table/service-table.component.html
@@ -1,14 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
-        <a class="list-group-item clearfix"
-        *ngFor="let product of products">
-            <div class="pull-left">
-                <h3 class="list-group-item-heading">{{product.name}}</h3>
-            </div>
-            <span class="pull-right">
-                <img [src]="product.image" [alt]="product.name" style="height: 50px; width: 80px;">
-            </span>
-        </a>
-        <app-service-item></app-service-item>
+        <app-service-item *ngFor="let product of products"
+        [product]="product"
+        ></app-service-item>
     </div>
 </div>
