--- a/src/app/service-list/service-edit/service-form/service-form.component.html
+++ b/src/app/service-list/service-edit/service-form/service-form.component.html
@@ -1,28 +1,49 @@
 <div class="row">
-    <div class="col-xs-12">
-        <h3 class="text-left">Оставить заявку</h3>
-        <form>
-            <div class="row">
-                <div class="col-sm-3">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" class="form-control">
-                </div>
-                <div class="col-sm-3 form-group">
-                    <label for="name">Название</label>
-                    <input type="text" id="name" class="form-control">
-                </div>
-                <div class="col-sm-2 form-group">
-                    <label for="amount">Количество</label>
-                    <input type="amount" id="amount" class="form-control">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <button class="btn btn-primary" type="submit">Изменить</button>
-                    <!-- <button class="btn btn-danger" type="button">Удалить</button> -->
-                    <button class="btn btn-success" type="button">Отправить</button>
-                </div>
-            </div>
-        </form>
-    </div>
+  <div class="col-xs-12">
+    <h3 class="text-left">Оставить заявку</h3>
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
+      <div class="row">
+        <div class="col-sm-3">
+          <label for="email">Email</label>
+          <input 
+          type="email" 
+          id="email" 
+          class="form-control" 
+          name="email"
+          ngModel
+          required
+          />
+        </div>
+        <div class="col-sm-3 form-group">
+          <label for="name">Название</label>
+          <select class="form-control" name="name" id="name" ngModel required>
+            <option value="Пластмасса">Пластмасса</option>
+            <option value="Қағаз қалдықтары">Қағаз қалдықтары</option>
+            <option value="Шыны">Шыны</option>
+            <option value="Полиэтилен">Полиэтилен</option>
+            <option value="Картон">Картон</option>
+          </select>
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="amount">Количество</label>
+          <input 
+          type="amount" 
+          id="amount" 
+          class="form-control" 
+          name="amount"
+          ngModel
+          required
+          [pattern]="'^[1-9]+[0-9]*$'"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-primary" type="submit">Изменить</button>
+          <!-- <button class="btn btn-danger" type="button">Удалить</button> -->
+          <button class="btn btn-success" type="button" [disabled]="!f.valid">Отправить</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
