--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -3,9 +3,9 @@
     <div class="footer__content">
       <div class="footer__inner">
         <h6 class="footer__inner-title">Связаться с нами</h6>
-        <p class="footer__inner-text">ҚарағандыЖылуСбыт</p>
-        <a href="mailto:example@example.com" class="footer__inner-email"
-          >example@gmail.com</a
+        <p class="footer__inner-text"><a><span class="glyphicon glyphicon-phone"></span>    +7 777 049 1104</a></p>
+        <a href="mailto:zhanat.78m@mail.ru" class="footer__inner-email"
+          >zhanatm.78@mail.ru</a
         >
         <form class="footer__inner-form">
           <input
