--- a/src/app/service-list/service-list.component.html
+++ b/src/app/service-list/service-list.component.html
@@ -1,5 +1,5 @@
 <div class="row" id="service">
-    <h1 class="service-title">Виды принимаемого сырья</h1>
+    <h1 class="service-title">Виды принимаемого сырья:</h1>
   <div class="col-md-5">
     <app-service-table></app-service-table>
    
