--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -25,8 +25,13 @@ h1 + p{
     font-size: large;
     font-weight: bolder;
     flex-direction: column;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 span{
     margin-top: 15px;
+}
+.text-left{
+    font-size: 36px;
+    font-weight: 500;
 }
 
