--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
+   <app-auth></app-auth>
     <app-main></app-main>
     <app-about></app-about>
     <app-service-list></app-service-list>
