--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,25 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a href="#" class="navbar-brand">Logo</a>
-        </div>
-        <ul class="nav navbar-nav" style="color: white;">
-            <li><a role="button" (click)="onScroll('main')">Главная</a></li>
-            <li><a role="button" (click)="onScroll('service')">Услуги</a></li>
-            <li><a role="button" (click)="onScroll('about')">О Компании</a></li>
-            <li><a role="button" (click)="onScroll('partners')">Партнеры</a></li>
-            <li><a role="button" (click)="onScroll('contacts')">Контакты</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="#" class="navbar-brand">Logo</a>
     </div>
+    <ul class="nav navbar-nav" style="color: white">
+      <li><a role="button" (click)="onScroll('main')">Главная</a></li>
+      <li *ngIf="!isAuthenticated">
+        <a>Авторизация</a>
+      </li>
+      <li *ngIf="isAuthenticated"><a role="button" (click)="onScroll('service')">Услуги</a></li>
+      <li *ngIf="isAuthenticated"><a role="button" (click)="onScroll('about')">О Компании</a></li>
+      <li *ngIf="isAuthenticated"><a role="button" (click)="onScroll('partners')">Партнеры</a></li>
+      <li *ngIf="isAuthenticated"> <a role="button" (click)="onScroll('contacts')">Контакты</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li>
+        <a href="#"><span class="glyphicon glyphicon-user"></span> Sign up</a>
+      </li>
+      <li>
+        <a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+      </li>
+    </ul>
+  </div>
 </nav>
