--- a/src/app/service-list/service-edit/service-wait-list/service-wait-list.component.html
+++ b/src/app/service-list/service-edit/service-wait-list/service-wait-list.component.html
@@ -8,12 +8,12 @@
         <th>Дата вывоза</th>
         <th>Сумма заявки</th>
       </tr>
-      <tr>
-          <td>1</td>
-          <td>Выполнено</td>
-          <td>0001</td>
-          <td>{{data}}</td>
-          <td>45000</td>
+      <tr *ngFor="let item of waitlist; let i=index">
+          <td>{{i+1}}</td>
+          <td>{{item.name}}</td>
+          <td>000{{i+1}}</td>
+          <td>{{item.date}}</td>
+          <td>{{item.sum}}</td>
       </tr>
     </table>
   </div>
