--- a/src/app/author/auth.component.html
+++ b/src/app/author/auth.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="row" id="author">
+  <h1 class="text-left">Авторизация</h1>
     <div class="col-xs-12 col-md-6 col-md-offset-3">
         <div class="alert alert-danger" *ngIf="error">
             <p>{{error}}</p>
