--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Logo</a>
+      <a href="#" class="navbar-brand"><img src="../../assets/imgs/logo-ecosys.jpg" alt="logo" class="img-responsive" style="height: 30px;"></a>
     </div>
     <ul class="nav navbar-nav" style="color: white">
       <li><a role="button" (click)="onScroll('main')">Главная</a></li>
