Added partners address telephone number

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <app-about *ngIf="isAuthentication"></app-about>
     <app-auth *ngIf="!isAuthentication"></app-auth>
     <app-service-list *ngIf="isAuthentication"></app-service-list>
+    <app-partners *ngIf="isAuthentication"></app-partners>
   </div>
 </div>
 <app-contacts></app-contacts>
