--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,9 @@
       <li *ngIf="!isAuthenticated">
         <a (click)="onScroll('author')"> Авторизация</a>
       </li>
-      <li *ngIf="isAuthenticated"><a role="button" (click)="onScroll('about')">О Компании</a></li>
+      <li *ngIf="isAuthenticated"><a role="button" (click)="onScroll('about')">Продукты</a></li>
       <li *ngIf="isAuthenticated"><a role="button" (click)="onScroll('service')">Услуги</a></li>
-      <!-- <li><a role="button" (click)="onScroll('partners')">Партнеры</a></li> -->
+      <li *ngIf="isAuthenticated"><a role="button" (click)="onScroll('partners')">О компании</a></li>
       <li><a role="button" (click)="onScroll('contacts')">Контакты</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
