--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -1,1 +1,25 @@
-<p>partners works!</p>
+<div class="row" id="partners">
+    <div class="about-text text-center">
+        "Мукажанова Ж.Х." ИП был основан в ноябре 2013 года. ИП занимается сбором и
+        сортировкой макулатуры, пластика, стекла и другого вторичного сырья.
+        Зарегистрирована в Налоговом комитете Министерства финансов Республики
+        Казахстан и выдано свидетельство о регистрации №0240385. ИП создал
+        инфраструктуру и на практике доказал, что можно собирать отдельно. Твердые
+        отходы представляют серьезную угрозу окружающей среде во всем мире.
+      </div>
+      <hr>
+      <div class="about-text text-center">
+        ИП убежден, что мы не одиноки в своих целях и что в Казахстане растет
+        количество потребителей, которые задумываются о судьбе собираемого ими
+        мусора, растет и социальная ответственность бизнеса. Они хотят, чтобы все,
+        от простого человека до крупного бизнеса, изменили свое отношение к мусору и
+        вместе начали менять наше общество.
+      </div>
+      <hr>
+      <div class="about-text text-center">
+        Основные потребители – жители Карагандинской области, работники Казахской
+        медной компании, домохозяйки, пенсионеры и другие. ИП принимает отходы от
+        потребителей на переработку, сортирует их, очищает, снимает этикетки и
+        отправляет на переработку.
+      </div>
+</div>
