--- a/src/app/service-list/service-list.component.html
+++ b/src/app/service-list/service-list.component.html
@@ -11,6 +11,6 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-     <app-service-edit></app-service-edit>
+     <app-service-edit *ngIf="isAuthentication"></app-service-edit>
   </div>
 </div>
