--- a/src/app/service-list/service-edit/service-form/service-form.component.html
+++ b/src/app/service-list/service-edit/service-form/service-form.component.html
@@ -65,6 +65,8 @@
           <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Добавить</button>
           <!-- <button class="btn btn-danger" type="button">Удалить</button> -->
           <button class="btn btn-success" type="button" (click)="onSave()" [disabled]="!disableMode">Отправить</button>
+          <button class="btn btn-primary cancel" type="button" (click)="onCancel()" [disabled]="!cancel">Отменить</button>
+          <button class="btn btn-primary cancel" type="button" (click)="onPay()" [disabled]="!cancel">Оплачено</button>
         </div>
       </div>
     </form>
